@@ -757,7 +757,7 @@ wait for text box # wait until the player continues</example>
 		<command id="resetgame">
 			<canon>reset game</canon>
 			<shortname>reset game</shortname>
-			<description>Resets and starts a new game, skipping both title and load game screens. This can be necessary to use this instead of <ref>gameover</ref> as it will not exit the program if the title screen and load screen have been disabled. It always resets the game back to the beginning.</description>
+			<description>Resets and starts a new game, skipping both title and load game screens. It can be necessary to use this instead of <ref>gameover</ref> as it will not exit the program if the title screen and load screen have been disabled. It always resets the game back to the beginning.</description>
 		</command>
 		<command id="showvalue">
 			<canon>show value (number)</canon>
@@ -3353,7 +3353,7 @@ end
 		<command id="leader">
 			<canon>leader</canon>
 			<shortname>leader</shortname>
-			<description>Returns the hero number of the current leader</description>
+			<description>Returns the hero ID number (as given in the Edit Hero Stats menu) of the current caterpillar party leader.</description>
 		</command>
 		<command id="herox">
 			<canon>hero X (who)</canon>
@@ -4210,7 +4210,7 @@ end</example></description>
 		<command id="setheropicture">
 			<canon>set hero picture (who,picture,type)</canon>
 			<shortname>set hero picture</shortname>
-			<description>Permanently changes a hero&apos;s picture. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is the index number of the picture to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle picture or their walkabout picture. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<description>Permanently changes a hero&apos;s picture. The first argument is the hero's position in the party. (Use <ref>findhero</ref> if you want refer to the hero by name.) The second argument is the index number of the picture to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle picture or their walkabout picture. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
 			<seealso>
 				<ref>resetheropicture</ref>
 			</seealso>
@@ -4218,7 +4218,7 @@ end</example></description>
 		<command id="setheropalette">
 			<canon>set hero palette (who,palette,type)</canon>
 			<shortname>set hero palette</shortname>
-			<description>Permanently changes a hero&apos;s 16-color palette. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is the index number of the 16-color palette to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<description>Permanently changes a hero&apos;s 16-color palette. The first argument is the hero's position in the party. (Use <ref>findhero</ref> if you want refer to the hero by name.) The second argument is the index number of the 16-color palette to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
 			<seealso>
 				<ref>resetheropalette</ref>
 			</seealso>
@@ -4244,7 +4244,7 @@ end</example></description>
 		<command id="resetheropalette">
 			<canon>reset hero palette (who,type)</canon>
 			<shortname>reset hero palette</shortname>
-			<description>Resets a hero&apos;s palette that was previously changed with <ref>setheropalette</ref> back to the default palette. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<description>Resets a hero&apos;s palette that was previously changed with <ref>setheropalette</ref> back to the default palette. The first argument is the hero's position in the party. (Use <ref>findhero</ref> if you want refer to the hero by name.) The second argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
 			<seealso>
 				<ref>setheropicture</ref>
 			</seealso>
