@@ -16,7 +16,8 @@ WHAT IS NEW?
 Mar ? 2010 [Ypsiliform+3]
 
   * Bugfixes
-    *  Bug 816: Freeze on attack instead-chaining on multi-stage chains
+    * Bug 816: Freeze on attack instead-chaining on multi-stage chains
+    * The "leader" command has never worked.
 
 Feb 8 2010 [Ypsiliform+2]
 
